--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Andrew</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
@@ -9,6 +10,20 @@
             <div class="header--text">
                 <h1>Andrew Bostick</h1>
                 <h2>Frontend Web Developer</h2>
+                <ul class="ul-social">
+                    <li class="li-social-links">
+                        <a class="social" href="https://github.com/andbostick" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="li-social-links">
+                        <a class="social" href="https://www.linkedin.com/in/andrew-bostick-390bb4161/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="li-social-links">
+                        <a class="social" href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="li-social-links">
+                        <a class="social" href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    </li>
+                </ul>
             </div>
         </div>
         
@@ -37,7 +52,11 @@
                 </div>
             </div>
         <div class="contact middle">
-            <form class="contact--form">
+            <div class="">
+                <h2 class="projects--text">Get In Touch With Me</h2>
+            </div>
+            <div class="form">
+            <form method="POST" class="contact--form" action="https://formspree.io/andbostick@gmail.com">
                 <div>
                     <label for="name">Name</label>
                     <br>
@@ -57,7 +76,7 @@
                     <button type="submit">Send your message</button>
                 </div>
             </form>
-
+        </div>
         </div>    
         <script src="scripts.js"></script>
     </body>
