fixed some class name

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             </div>
         </div>
         
-        <div class="middle">
-            <div class="middle--text">
+        <div class="content">
+            <div class="content--text">
                 <h2>About Me</h2>
-                <p class="middle__paragraph">I am a self taught web developer.</p>
-                <p class="middle__paragraph">My skills are using Javascript, HTML, and CSS.</p>
+                <p class="content__paragraph">I am a self taught web developer.</p>
+                <p class="content__paragraph">My skills are using Javascript, HTML, and CSS.</p>
             </div>
         </div>
             <div class="projects">
@@ -51,7 +51,7 @@
                     <div><h2>Place holder Text</h2></div>
                 </div>
             </div>
-        <div class="contact middle">
+        <div class="contact content">
             <div class="">
                 <h2 class="projects--text">Get In Touch With Me</h2>
             </div>
